# serverwall

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.release  Dockerfile.run  Dockerfile.test  README.md  THIRD_PARTY_NOTICES  docker-compose.test.yml  docker-compose.yml
config/: serverwall.toml
packaging/: install.sh
packaging/systemd/: serverwall-webui.service  serverwall-webui.socket  serverwall.service
serverwall-antispam/: Cargo.toml
serverwall-antispam/src/: headers.rs  lib.rs  pipeline.rs  result.rs  score.rs
serverwall-antispam/src/lists/: allow_list.rs  block_list.rs  blocklist.rs  mod.rs  whitelist.rs
serverwall-antispam/src/postdata/: antivirus.rs  arc.rs  attachment.rs  bulk.rs  charset.rs  content.rs  dkim.rs  dmarc.rs  header_analysis.rs  html.rs  mod.rs  ratio.rs  url_analysis.rs
serverwall-antispam/src/predata/: behavior.rs  dnsbl.rs  early_talker.rs  helo.rs  mod.rs  rate_limit.rs  rdns.rs  residential.rs  spf.rs
serverwall-antispam/src/storage/: mod.rs  rate_db.rs
serverwall-cli/: Cargo.toml
serverwall-cli/src/: main.rs  output.rs
serverwall-cli/src/commands/: acl.rs  acme.rs  antispam.rs  backend.rs  cert.rs  dkim.rs  dmarc.rs  frontend.rs  global.rs  log_profile.rs  mod.rs  queue.rs  relay.rs  reload.rs  security.rs  security_profile.rs  spf.rs  status.rs  waf.rs  webui.rs
serverwall-core/: Cargo.toml
serverwall-core/src/: error.rs  lib.rs  types.rs
serverwall-core/src/acl/: allow_list.rs  block_list.rs  geo.rs  matcher.rs  mod.rs
serverwall-core/src/balancer/: ip_hash.rs  least_conn.rs  mod.rs  round_robin.rs
serverwall-core/src/config/: defaults.rs  editor.rs  loader.rs  mod.rs  schema.rs  signal.rs  writer.rs
serverwall-core/src/health/: checker.rs  mod.rs  state.rs
serverwall-core/src/logging/: apache.rs  mod.rs  postfix.rs  protocol_log.rs  vhost_router.rs
serverwall-core/src/proto/: http.rs  imap.rs  mod.rs  smtp.rs  stratum.rs
serverwall-core/src/tls/: acme.rs  cert_store.rs  context.rs  ja3.rs  mod.rs  ocsp.rs  self_signed.rs
serverwall-proxy/: Cargo.toml
serverwall-proxy/src/: main.rs  metrics.rs  pipeline.rs  reload.rs  server.rs
serverwall-proxy/src/listener/: mod.rs  tcp_listener.rs  tls_listener.rs
serverwall-proxy/src/proxy/: http_proxy.rs  imap_proxy.rs  mod.rs  smtp_proxy.rs  stratum_proxy.rs  tcp_proxy.rs
serverwall-relay/: Cargo.toml
serverwall-relay/src/: bounce.rs  lib.rs  receiver.rs  status.rs  trusted_hosts.rs
serverwall-relay/src/delivery/: mod.rs  mx_resolver.rs  sender.rs  tls.rs
serverwall-relay/src/dkim/: key_store.rs  mod.rs  signer.rs
serverwall-relay/src/outbound_policy/: content_policy.rs  mod.rs  rate_limit.rs  recipient_limit.rs  spf_alignment.rs
serverwall-relay/src/queue/: message.rs  mod.rs  scheduler.rs  spool.rs
serverwall-waf/: Cargo.toml
serverwall-waf/src/: anomaly.rs  engine.rs  lib.rs  request.rs  response.rs
serverwall-waf/src/inspection/: command_injection.rs  mod.rs  path_traversal.rs  protocol_attack.rs  sql_injection.rs  xss.rs
serverwall-waf/src/rate_limit/: mod.rs
serverwall-waf/src/rules/: matcher.rs  mod.rs  parser.rs  rule_set.rs
serverwall-webui/: Cargo.toml
serverwall-webui/src/: main.rs  middleware.rs  state.rs  static_files.rs  templates.rs  tls.rs
serverwall-webui/src/routes/: acl.rs  acme_settings.rs  antispam.rs  auth.rs  backends.rs  certificates.rs  dkim.rs  dmarc_policy.rs  frontends.rs  global_settings.rs  log_profiles.rs  logs.rs  mod.rs  queue.rs  relay.rs  reload.rs  security_profiles.rs  security_settings.rs  spf.rs  status.rs  system.rs  tls_profiles.rs  waf.rs  webui_settings.rs
serverwall-webui/templates/: acl.html  acme-settings.html  antispam.html  backends-edit.html  backends.html  base.html  certificates-acme.html  certificates-generate.html  certificates-import.html  certificates-view.html  certificates.html  dkim.html  dmarc.html  frontends-edit.html  frontends.html  global-settings.html  index.html  log-profiles.html  login.html  logs.html  queue.html  relay.html  security-profiles.html  security.html  spf.html  tls-profiles.html  waf.html  webui-settings.html
test/: entrypoint.sh  nginx.conf
web-ui/: acl.html  acme-settings.html  antispam.html  app.css  app.js  backends-edit.html  backends.html  certificates-acme.html  certificates-generate.html  certificates-import.html  certificates-view.html  certificates.html  dkim.html  dmarc.html  frontends-edit.html  frontends.html  global-settings.html  index.html  log-profiles.html  login.html  logs.html  queue.html  relay.html  security-profiles.html  security.html  spf.html  tls-profiles.html  waf.html
