[package]
name = "serverwall-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ServerWall CLI management tool (serverwallctl)"

[[bin]]
name = "serverwallctl"
path = "src/main.rs"

[dependencies]
serverwall-core = { path = "../serverwall-core" }
serverwall-relay = { path = "../serverwall-relay" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
openssl = { workspace = true }
