[package]
name = "serverwall-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ServerWall proxy daemon: multi-protocol load balancer"

[[bin]]
name = "serverwall"
path = "src/main.rs"

[dependencies]
serverwall-core = { path = "../serverwall-core" }
serverwall-waf = { path = "../serverwall-waf" }
serverwall-antispam = { path = "../serverwall-antispam" }
serverwall-relay = { path = "../serverwall-relay" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pin-project-lite = { workspace = true }
argon2 = { workspace = true }
openssl = { workspace = true }
if-addrs = { workspace = true }
regex = { workspace = true }
socket2 = { workspace = true }
flate2 = { workspace = true }
